--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -213,46 +213,61 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
-                        <li class="nav-item menu-open">
-                            <a href="#" class="nav-link active">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+
+                        <li class="nav-item">
+                            <a asp-action="Dashboard" asp-controller="User" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=2p051aLcoRBQ&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=2p051aLcoRBQ&amp;format=png 2x" width="30px" height="30px" alt="Dashboard icon" style="">
                                 <p>
                                     Dashboard
-                                    <i class="right fas fa-angle-left"></i>
+                                    <span class="badge badge-info right"></span>
                                 </p>
                             </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-action="Profile" asp-controller="User" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Profile</p>
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-action="Complaint" asp-controller="User" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Complaint</p>
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-action="Suggession" asp-controller="User" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Demand</p>
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-action="Suggession" asp-controller="User" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Suggession</p>
-                                    </a>
-                                </li>
-                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-action="Profile" asp-controller="User" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=4gjfpXeaY5Hv&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=4gjfpXeaY5Hv&amp;format=png 2x" width="30px" height="30px" alt="Team icon" style="">
+                                <p>
+                                    Profile
+                                    <span class="badge badge-info right"></span>
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-action="Complaint" asp-controller="User" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=BL3KLsMipdjo&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=BL3KLsMipdjo&amp;format=png 2x" width="30px" height="30px" alt="Complaint icon" style="">
+                                <p>
+                                    Complaint
+                                    <span class="badge badge-info right"></span>
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-action="Demand" asp-controller="User" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=xls4OAzngGkb&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=xls4OAzngGkb&amp;format=png 2x" width="30px" height="30px" alt="Demand icon" style="">
+                                <p>
+                                     Demand
+                                    <span class="badge badge-info right"></span>
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-action="Suggession" asp-controller="User" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=wTwF37yDAifF&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=wTwF37yDAifF&amp;format=png 2x" width="30px" height="30px" alt="Suggestion icon" style="">
+                                <p>
+                                    Suggession
+                                    <span class="badge badge-info right"></span>
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-action="Feedback" asp-controller="User" class="nav-link">
+                                <img data-v-d7e8173f="" class="app-preview__image-origin" srcset="https://img.icons8.com/?size=256&amp;id=13823&amp;format=png 1x, https://img.icons8.com/?size=512&amp;id=13823&amp;format=png 2x" width="30px" height="30px" alt="Popular icon" style="">
+                                <p>
+                                    Feedback
+                                    <span class="badge badge-info right"></span>
+                                </p>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
