--- a/VidhayakApp.Web/Views/User/Profile.cshtml
+++ b/VidhayakApp.Web/Views/User/Profile.cshtml
@@ -9,7 +9,7 @@
 <section b-sa87j8ggoz="" class="content">
     <div b-sa87j8ggoz="" class="container-fluid">
 
-        <nav aria-label="breadcrumb">
+        @* <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0 d-flex align-items-center">
                 <li class="breadcrumb-item">
                     <a href="index.html" class="link"><i class="mdi mdi-home-outline fs-4"></i></a>
@@ -18,7 +18,7 @@
                     Profile
                 </li>
             </ol>
-        </nav>
+        </nav> *@
 
         <div class="container-fluid">
             <!-- ============================================================== -->
