--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -280,17 +280,17 @@
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">Dashboard</h1>
+                            <h1 class="m-0">@ViewData["Title"]</h1>
                         </div>
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
                                 <li class="breadcrumb-item"><a asp-action="Dashboard" asp-controller="User">User</a></li>
-                                <li class="breadcrumb-item active">Dashboard </li>
+                                <li class="breadcrumb-item active">@ViewData["Title"] </li>
                             </ol>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
 
 
             <section class="content">
@@ -299,13 +299,42 @@
                 </div>
             </section>
 
-        <footer class="main-footer">
+       @*  <footer class="main-footer">
             <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
                 <b>Version</b> 3.2.0
             </div>
-        </footer>
+        </footer> *@
+
+            <!-- Remove the container if you want to extend the Footer to full width. -->
+            <div class="container my-3">
+
+                <section class="">
+                    <!-- Footer -->
+                    <footer class="text-center text-white" style="background-color: lightslategray;">
+                        <!-- Grid container -->
+                       @*  <div class="container p-4 pb-0">
+                             <!-- Section: CTA -->
+                            <section class="">
+                                <p class="d-flex justify-content-center align-items-center">
+                                    <span class="me-3">Register for free</span>
+                                </p>
+                            </section>
+                            <!-- Section: CTA --> 
+                        </div> *@
+                        <!-- Grid container -->
+                        <!-- Copyright -->
+                        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                            © 2024 Copyright:
+                        </div>
+                        <!-- Copyright -->
+                    </footer>
+                    <!-- Footer -->
+                </section>
+
+            </div>
+            <!-- End of .container -->
 
         <aside class="control-sidebar control-sidebar-dark">
 
