--- a/VidhayakApp.Web/Views/Account/Register.cshtml
+++ b/VidhayakApp.Web/Views/Account/Register.cshtml
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                         <div class="input-group mb-3">
-                        <input asp-for="MobileNumber" class="form-control" id="MobileNumber" aria-describedby="MobHelp">
+                        <input asp-for="MobileNumber" class="form-control" id="MobileNumber" aria-describedby="MobHelp" placeholder="Enter Mobile...">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                         <div class="input-group mb-3">
-                        <input asp-for="Address" asp-controller="Account" class="form-control" id="Address " aria-describedby="AddressHelp">
+                        <input asp-for="Address" asp-controller="Account" class="form-control" id="Address " aria-describedby="AddressHelp" placeholder="Enter Address...">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                         <div class="input-group mb-3">
-                        <input asp-for="Ward" asp-controller="Account" class="form-control" id="Ward" aria-describedby="WardHelp">
+                        <input asp-for="Ward" asp-controller="Account" class="form-control" id="Ward" aria-describedby="WardHelp" placeholder="Enter Ward...">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
