--- a/VidhayakApp.Web/Views/Admin/Delete.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Delete.cshtml
@@ -1,13 +1,15 @@
 ﻿@using VidhayakApp.Core.Entities
 @model User
+
+
   
 <form method="post">
 <div>
 
-     <a asp-controller="Admin" asp-action="DeleteAppUser" aria-pressed="true"></a>
+        <a asp-controller="Admin" asp-action="DeleteAppUser" aria-pressed="true"></a>
         <div class="alert alert-success" role="alert">
-            @TempData["Message"]
+           Record Deleted
         </div>
-        <button asp-action="AppUsers" asp-controller="Admin" class="btn btn-dark btn-lg active text-center" role="button" aria-pressed="true">Back To List</button>
+        <button  asp-controller="Admin" asp-action="AppUsers"  class="btn btn-dark btn-lg active text-center" role="button" aria-pressed="true">Back To List</button>
 </div>
 </form>       
