--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+    <meta name="google-translate-customization"
+          content="3280487709591956-dc3fc45d489f056a-g5378ebab0cbcd0a4-12" />
+    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>VidhayakApp | Dashboard</title>
 
@@ -32,8 +34,21 @@
     <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
+    <div id="google_translate_element"></div>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+            },
+                'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript"
+            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
 
-<div class="wrapper">
+    </script>
+    <div class="wrapper">
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
