--- a/VidhayakApp.Web/Views/Admin/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Dashboard.cshtml
@@ -16,10 +16,10 @@
             <h1>@ViewData["Title"]</h1>
             
         </div>
-        <a href="#" class="report">
+        @* <a href="#" class="report">
             <i class='bx bx-cloud-download'></i>
             <span>Download CSV</span>
-        </a>
+        </a> *@
     </div>
 
     <!-- Insights -->
