09-03-2024 21:23pm created resource.resx

--- a/VidhayakApp.Web/Views/Account/Register.cshtml
+++ b/VidhayakApp.Web/Views/Account/Register.cshtml
@@ -11,7 +11,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Registration Page</title>
+    <title>Registration Page</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -114,7 +114,7 @@
                     </div>
                 </form>
 
-                <div class="social-auth-links text-center">
+               @*  <div class="social-auth-links text-center">
                     <p>- OR -</p>
                     <a href="#" class="btn btn-block btn-primary">
                         <i class="fab fa-facebook mr-2"></i>
@@ -124,10 +124,10 @@
                         <i class="fab fa-google-plus mr-2"></i>
                         Sign up using Google+
                     </a>
-                </div>
+                </div> *@
 
-                <a href="login.html" class="text-center">I already have a membership</a>
-            </div>
+              @*   <a href="login.html" class="text-center">I already have a membership</a>
+            </div> *@
             <!-- /.form-box -->
         </div><!-- /.card -->
     </div>
