--- a/VidhayakApp.Web/Views/Account/Login.cshtml
+++ b/VidhayakApp.Web/Views/Account/Login.cshtml
@@ -32,8 +32,8 @@
                                 <span class="fas fa-lock"></span>
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
+                     </div> 
+                   @*  <div class="row">
                         <div class="col-8">
                             <div class="icheck-primary">
                                 <input type="checkbox" id="remember">
@@ -41,16 +41,16 @@
                                     Remember Me
                                 </label>
                             </div>
-                        </div>
+                        </div> *@
                         <!-- /.col -->
                         <div class="col-4">
                             <button asp-action="login" asp-controller="Account" type="submit" class="btn btn-primary btn-block">Sign In</button>
                         </div>
                         <!-- /.col -->
-                    </div>
+                    @* </div> *@
                 </form>
 
-                <div class="social-auth-links text-center mb-3">
+               @*  <div class="social-auth-links text-center mb-3">
                     <p>- OR -</p>
                     <a href="#" class="btn btn-block btn-primary">
                         <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
@@ -58,15 +58,15 @@
                     <a href="#" class="btn btn-block btn-danger">
                         <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
                     </a>
-                </div>
+                </div> *@
                 <!-- /.social-auth-links -->
 
                 <p class="mb-1">
                     <a href="forgot-password.html">I forgot my password</a>
                 </p>
-                <p class="mb-0">
+               @*  <p class="mb-0">
                     <a href="register.html" class="text-center">Register a new membership</a>
-                </p>
+                </p> *@
             </div>
             <!-- /.login-card-body -->
         </div>
