--- a/VidhayakApp.Web/Views/Admin/Profile.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Profile.cshtml
@@ -210,7 +210,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <center class="m-t-30">
-                                    <img src="../assets/images/users/5.jpg" class="rounded-circle" width="150">
+                                    <img src="~/dist/img/user68.jpg" class="rounded-circle" width="150">
                                     <h4 class="card-title m-t-10">Hanna Gover</h4>
                                     <h6 class="card-subtitle">Accoubts Manager Amix corp</h6>
                                     <div class="row text-center justify-content-md-center">
