--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
-    <div id="google_translate_element"></div>
+   @*  <div id="google_translate_element"></div>
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -47,7 +47,7 @@
     <script type="text/javascript"
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
 
-    </script>
+    </script> *@
     <div class="wrapper">
 
   <!-- Preloader -->
@@ -235,8 +235,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
                 </div>
+                <strong>Copyright &copy; 2024-2029 <a href="https://adminlte.io"></a>.</strong> All rights reserved.
                 <div class="col text-right">
                     <b>Version</b> 3.2.0
                 </div>
