--- a/VidhayakApp.Web/Views/User/Profile.cshtml
+++ b/VidhayakApp.Web/Views/User/Profile.cshtml
@@ -113,7 +113,7 @@
                                         <textarea rows="5" class="form-control form-control-line"></textarea>
                                     </div>
                                 </div>
-                                <div class="form-group">
+                                @* <div class="form-group">
                                     <label class="col-sm-12">Select Country</label>
                                     <div class="col-sm-12">
                                         <select class="form-select shadow-none form-control-line">
@@ -124,7 +124,7 @@
                                             <option>Thailand</option>
                                         </select>
                                     </div>
-                                </div>
+                                </div> *@
                                 <div class="form-group">
                                     <div class="col-sm-12">
                                         <button class="btn btn-success text-white">
